Prevented layout shift when article cards receives focus in grid view

--- a/frontend/src/app/article-card/article-card.component.scss
+++ b/frontend/src/app/article-card/article-card.component.scss
@@ -11,6 +11,7 @@
   margin-bottom: 16px;
   color: var(--color-text);
   transition: background-color 0.3s, border-color 0.3s;
+  border: 2px solid transparent;
 
   @media (max-width: 600px) {
     margin: 0;
@@ -257,9 +258,10 @@
   }
 
   &:focus-visible {
-    outline: none;
-    border: 2px solid var(--color-vonesco);
-    box-shadow: 0 0 0 1px var(--color-vonesco);
+    outline: 2px solid var(--color-vonesco);
+    outline-offset: -2px;
+    border-color: transparent;
+    box-shadow: none;
   }
 }
 
